# cpp-telegram-bot

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
app/: main.cpp
include/bot/: arg-parser.hpp  bot.hpp  buffer.hpp  unsplash.hpp
src/: arg-parser.cpp  bot.cpp  buffer.cpp
tests/: CMakeLists.txt  test-buffer.cpp
tests/yaml-test/: bot-test.yaml
